		Ensure Show-Change regenerates analog traces.
		Added braces inside Tcl source command to allow spaces in 
		filenames for Tcl scripts.
3.3.101	08may19	Added gtkwave::getFacDir, gtkwave::getFacVtype, and
		gtkwave::getFacDtype Tcl accessor functions that function
		similar to gtkwave::getFacName.
		Pair $end with $dumpvars in VCD writers.
		Make %.16g printing in baseconvert.c more resistant to power
		of 10 roundoff errors.
		Remove register keyword where applicable as is deprecated.
                Added --saveonexit gtkwave command line	option.
3.3.102	21sep19	Remove redundant TREE_VHDL_ST_PACKAGE from SST exclude.
		Added addCommentTracesFromList tcl command from user patch.
		Harden savefile loader for missing group start on vectors.
		Preliminary VHDL support for wlf2vcd.
		Add missing return value checks on mmap() in FST writer.
3.3.103	03nov19 Fix MAP_FAILED missing for MinGW.
                Fix to make the coloration red on 'u' traces.  (Bug from 
		Dinotrace-like rendering in 3.3.96.)
		Typo fix on missing group start on vectors.
3.3.104 24jan20 Added support for loading .vf files (provided FSDB reader
                libraries are enabled).
                Added support for dumping variable types in vcd	saveer,	not
                just using "wire" for non-reals/strings.
		Fix for uninitialized values at time 0 for FST, FSDB loaders.
3.3.105 28jun20 Fix bad (void) of is_closing in fstDestroyMmaps when using
                Cygwin or MinGW.
		Fix left shift overflow in cvt_fpsdec().
		Add in missing file/translate/process filter for reals.
		Fix for bitvec merging in GHW so integers arrays can be viewed.
                Added Shift-Up/Down highlight with scroll in order to assist
                with left/right arrow based transition movement.
		Fix Show Wave Highlight so it is not dependent on Show Grid.
                Fix negative MSBs on VCD loaders for vectors.
		Fix getpwuid() null pointer exception.
		Add missing recursion case to treenamefix().